logs/Slang/generic/member/class_member_test_45.sv.log
name: class_member_test_45
description: Test
should_fail: 0
tags: 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_45.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_45.sv:7:1: error: language feature not yet supported
class constructible;
^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_45.sv:8:16: error: expected identifier
extern function new();
               ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_45.sv:8:17: error: expected member
extern function new();
                ^~~
